<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techno.explorekotlin.screens.MainActivity">
    <Button
        android:id="@+id/btnDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_realm_db" />

    <Button
        android:id="@+id/btnNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_slide_menu" />
    <Button
        android:id="@+id/btnTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tab_layout" />


</LinearLayout>